# onap-release-mapping-tool

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  action.yaml  index.html  pyproject.toml
.github/: dependabot.yml
.github/scripts/: copy-artifacts.sh  generate-index.sh
.github/workflows/: autolabeler.yaml  build-test-release.yaml  build-test.yaml  mapping-production.yaml  onap-release-map.yaml  release-drafter.yaml  tag-push.yaml  testing.yaml
2026-04-02/: manifest.md  manifest.yaml  metadata.json
2026-04-05/: manifest.csv  manifest.html  manifest.json  manifest.md  manifest.yaml  metadata.json
2026-04-06/: manifest.html  manifest.json  manifest.md  manifest.yaml  metadata.json
2026-04-23/: manifest.csv  manifest.html  manifest.json  manifest.md  manifest.yaml  metadata.json
configuration/: default.yaml
docs/: ONAP-RELEASE-TOOL-PLAN.md  Release tool prompts.txt  changelog.rst  cli.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: collectors.rst  differ.rst  exceptions.rst  exporter.rst  index.rst  manifest.rst  models.rst  parsers.rst
latest/: manifest.csv  manifest.html  manifest.json  manifest.md  manifest.yaml  metadata.json
src/onap_release_map/: __init__.py  __main__.py  cli.py  config.py  differ.py  exceptions.py  exporter.py  manifest.py
src/onap_release_map/collectors/: __init__.py  gerrit.py  integration.py  jjb.py  nexus.py  oom.py  relman.py
src/onap_release_map/data/: image_repo_mapping.yaml
src/onap_release_map/models/: __init__.py  docker_image.py  helm_component.py  manifest.py  repository.py  validation.py
src/onap_release_map/parsers/: __init__.py  helm.py  image_mapper.py  yaml_utils.py
src/onap_release_map/reconcilers/: __init__.py  oom_crossref.py
src/onap_release_map/schemas/: manifest-v1.schema.json
src/onap_release_map/validators/: __init__.py  mapping_audit.py
tests/: __init__.py  conftest.py  test_cli.py  test_differ.py  test_exporter.py  test_manifest.py
tests/test_collectors/: __init__.py  test_gerrit.py  test_jjb.py  test_nexus.py  test_oom.py  test_relman.py
tests/test_parsers/: __init__.py  test_helm.py  test_image_mapper.py  test_yaml_utils.py
tests/test_reconcilers/: __init__.py  test_oom_crossref.py
tests/test_validators/: __init__.py  test_mapping_audit.py
